# tinyos-riscv64

./: .gitignore  Cargo.toml  Makefile  linker.ld
.cache/clangd/index/: common.h.17545DC8293C7517.idx  config.h.6ECB9FFE8FE5858F.idx  context.S.2E1B9535ED104C41.idx  entry.S.281C9C93F7282562.idx  heap.c.27B856D8CF3373EF.idx  heap.h.2254A1048D8B3583.idx  init.c.1B687485291D0818.idx  init.h.BED5ECE57C7F5A1E.idx  list.h.03B883A5268D3F51.idx  main.c.A86E0BEE640C42C4.idx  mm.c.67A61658355F10B1.idx  mm.h.626F8280BCE5C120.idx  printf.c.A495BDC5A765024E.idx  printf.h.9512671CB6600EE0.idx  riscv.h.E7A1FE60B34FDD80.idx  spinlock.h.5401043C51BA2919.idx  start.c.AC879A5BF625A45C.idx  start.h.3517F45D4E739F47.idx  stdtypes.h.C5AA2A19D99DC459.idx  string.h.7FEE8E3C0F1A5F46.idx  task.h.CED294E142756873.idx  timer.c.E24E5403FF7680D5.idx  timer.h.A810DC1AF4FA1ACE.idx  trap.c.F12EB57271F484F8.idx  trap.h.AF680DFB97487E4F.idx  (+2 more)
.cargo/: config
include/: common.h  config.h  cpu.h  list.h  mm.h  printf.h  spinlock.h  stdtypes.h  string.h  task.h  test.h  timer.h
include/arch/: board.h  init.h  reg.S  riscv.h  start.h  trap.h
include/mm/: heap.h  mm.h
include/uart/: uart.h
src/: config.rs  linker.ld  main.c  main.rs  printf.c  string.c  task.c  timer.c
src/arch/: context.S  cpu.rs  entry.S  entry.rs  entry.s  init.c  macros.rs  mod.rs  start.c  timer.rs  trap.c  traps.S
src/common/: mod.rs  printf.rs  readable.rs
src/device/: console.rs  mod.rs
src/mm/: address.rs  config.rs  entry.rs  frame.rs  heap.c  mm.c  mod.rs  page.rs
src/task/: mod.rs  task.rs
src/uart/: uart.c
(+18 files in other folders)
