[package]
name = "tiny-riscv64"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
tock-registers = "0.9.0"
arrayvec = { version = "0.7.2", default-features = false }
bitflags = { version = "2.4.1", features = [] }
linked_list_allocator = "0.10.5"